--- a/arch/arm64/configs/asus/X00TD-ksu_defconfig
+++ b/arch/arm64/configs/asus/X00TD-ksu_defconfig
@@ -2,14 +2,25 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 4.19.241 Kernel Configuration
 #
-
+##
+##
+CONFIG_BLOCK_UNWANTED_FILES=y
+##
+CONFIG_KSU=y
+##
+CONFIG_KPROBES=n
+CONFIG_HAVE_KPROBES=n
+CONFIG_KPROBE_EVENTS=n
+##
+CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION_AUTO=n
+##
+#
 #
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-KnightWalker-KSU"
-CONFIG_LOCALVERSION_AUTO=y
 CONFIG_LOCALVERSION_BRANCH_SHA=y
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -694,11 +705,9 @@ CONFIG_SND_SOC_TFA9874=y
 #
 # General architecture-dependent options
 #
-# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_NMI=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
