--- a/.circleci/config-archlinux.yml
+++ b/.circleci/config-archlinux.yml
@@ -11,7 +11,7 @@ jobs:
           command: |
             pacman -Sy --needed --noconfirm archlinux-keyring
             pacman -Syyu --needed --noconfirm wget xmlto base-devel inetutils bc cpio python-sphinx python-sphinx_rtd_theme graphviz git python zip fortune-mod
-            git clone --depth=1 https://github.com/fredslbn/chime-caf.git -b main builder_kernel
+            git clone --depth=1 https://github.com/fredslbn/x00td2.git -b main builder_kernel
             cd builder_kernel
             
 workflows:
