--- a/arch/arm64/configs/asus/X01BD-ksu_defconfig
+++ b/arch/arm64/configs/asus/X01BD-ksu_defconfig
@@ -2,7 +2,19 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 4.19.241 Kernel Configuration
 #
-
+##
+##
+CONFIG_BLOCK_UNWANTED_FILES=y
+##
+CONFIG_KSU=y
+##
+CONFIG_KPROBES=n
+CONFIG_HAVE_KPROBES=n
+CONFIG_KPROBE_EVENTS=n
+##
+CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION_AUTO=n
+##
 #
 # General setup
 #
@@ -694,11 +706,9 @@ CONFIG_SND_SOC_TFA9874=y
 #
 # General architecture-dependent options
 #
-# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_NMI=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
