--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,3 +10,8 @@ task:
   setup_script:
     - ln -fs /usr/share/zoneinfo/Asia/Jakarta /etc/localtime && date
     - apt update && apt upgrade -y
+    - cd KernelSU
+    - git submodule update --init --recursive --remote
+    - git checkout v0.9.5
+    - git rev-list --count HEAD
+    - cd ..
