--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -231,5 +231,9 @@ source "drivers/gpu/msm/Kconfig"
 
 source "drivers/energy_model/Kconfig"
 
-source "drivers/kernelsu/Kconfig"
+menu "KernelSU"
+config KSU
+        bool "Ship KernelSU with kernel"
+	default y
+
 endmenu
